--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@phosphor-icons/react": "^2.1.5",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
     "@types/node": "^20",
