--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.5",
     "next": "14.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.7"
